<resources>
    <string name="app_name">PEHMO</string>
    <string name="title_activity_extrem">PEHMO</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="participant_id">ID</string>
    <string name="save">Save</string>
    <string name="email">your@email.com</string>
    <string name="welcome">Welcome</string>
    <string name="today_rescue_count">How many times did you need to take your rescue medication today?</string>
    <string name="today_regulates">Did you take the medication that regulates your asthma today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other_asthma_meds">What other medicine have you taken for asthma?</string>
    <string name="hint_meds_name">If any, what medicine?</string>
    <string name="symptoms">Symptoms</string>
    <string name="reflect_severity_symptoms">Options reflecting daily severity of symptoms:</string>
    <string name="symptom_shortness_breath">Shortness of breath</string>
    <string name="symptom_cough">Cough</string>
    <string name="symptom_phlegm">Phlegm production</string>
    <string name="symptom_wheezing">Wheezing</string>
    <string name="rate_not_at_all">Not at all</string>
    <string name="rate_mild">Mild</string>
    <string name="rate_moderate">Moderate</string>
    <string name="rate_strong">Severe</string>
    <string name="reflect_frequency_symptoms_medication">Reflecting frequency of symptoms or daily frequency of medication use</string>
    <string name="frequency_nocturnal">Nocturnal wake ups caused by symptoms</string>
    <string name="rate_once">Once</string>
    <string name="rate_twothree">2&#8211;3 times</string>
    <string name="rate_fourplus">4 times or more</string>
    <string name="frequency_opening_meds">Rescue medication of asthma (short-acting)</string>
    <string name="estimate_asthma_balance">Your own estimation about asthma balance</string>
    <string name="estimate_good">Good</string>
    <string name="estimate_more_less_controlled">More or less under control</string>
    <string name="estimate_poorly">Poorly under control</string>
    <string name="estimate_not_at_all_control">Not at all under control</string>
    <string name="day_act_normal">Did your asthma prevent you to act normally in work, school, or home / leisure time today?</string>
    <string name="changes_medication_dose">Changes in medication and new dose?</string>
    <string name="cold_today">Did you have a cold today?</string>
    <string name="doctorVisit">Did you visit a doctor today because of asthma or allergy?</string>
    <string name="otherConsiderations">Other considerations?</string>
    <string name="thanks">Thanks!</string>
    <string name="survey_notification_title">PEHMO survey</string>
    <string name="survey_notification_text">Press here to answer your daily symptoms!</string>
    <string name="symptom_flue">Symptoms of a common cold (flu)</string>
    <string name="ruuvi_scan">Tap to scan RuuviTag</string>
    <string name="locale">en</string>
    <string name="sync">Sync</string>
    <string name="ok">OK</string>
    <string name="update_available">Press here to update PEHMO to the latest version.</string>
    <string name="update_title">Update</string>
    <string name="country">Country</string>
    <string name="offline">Connect to Internet to update your profile</string>
    <string name="participant_created">Profile created!</string>
    <string name="pehmo_foreground">Thank you for your participation.</string>
    <string name="battery_ignore">Please allow PEHMO to run on the background.</string>
    <string name="location_disable">Please enable location.</string>
</resources>
